# splunk-intelligence

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  SKILL.md  pyproject.toml  serve.sh  task_ids.md
.claude/skills/splunk-analyze/: SKILL.md
.github/prompts/: onboard.prompt.md
copilot-agent/: SKILL.md
docs/: claude-hooks-integration.md  investigation-loop.md  splunk_standard_fields.md
memory/: splunk-analysis-project.md  splunk-analysis-task-policy.md  splunk-auth-decisions.md  splunk-proj-tasks-db-schema.md  splunk-runner-cli.md  splunk-uv-workflow.md
splunk/: __main__.py  agent.py  auth.py  client.py  config.py  connector.py  db.py  detectors.py  investigator.py  logger.py  mcp_server.py  parsers.py  runner.py  server.py  thread_saturation.py  tui.py  watcher.py
splunk/static/: ui.css
splunk/templates/ui/: base.html
splunk/templates/ui/partials/: cockpit.html  queries.html  run_detail.html
splunk/templates/ui/runs/: list.html
splunk/ui/: deps.py  routes.py
tests/: test_connector.py  test_detectors.py  test_mcp_tools.py  test_tui_snapshots.py
tests/__snapshots__/test_tui_snapshots/: test_dashboard_renders.raw  test_file_picker_renders.raw  test_launch_screen_renders.raw  test_live_analyze_screen_renders.raw
tests/fixtures/: access_logs.json  cert_errors.json  windows_events.json
