[project]
name = "splunk-analysis"
version = "0.2.0"
description = "Splunk investigation stack — Polars detectors + FastMCP tools for Copilot/Claude"
requires-python = ">=3.11"
dependencies = [
    "playwright",
    "requests",
    "python-dotenv",
    "polars",
    "fastapi",
    "uvicorn[standard]",
    "python-multipart",
    "mcp[cli]>=1.28.1",
    "textual",
]

[project.optional-dependencies]
llm = [
    "langchain-ollama",
    "langchain-core",
    "langgraph",
]
dev = [
    "pytest",
]
